# plasma-theme-switcher

./: CMakeLists.txt  README.MD  build-release  colorscheme.cpp  colorscheme.h  main.cpp
exceptions/: RuntimeException.cpp  RuntimeException.h
utils/: plasma.cpp  plasma.h  signals.cpp  signals.h
